[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo-introspect"
version = "0.1.0"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
anyhow = "1.0.89"
cainome-cairo-serde = "0.4.0"
num-traits = { version = "0.2", default-features = false }
serde = "1.0.228"
starknet = "0.17.0"
starknet-crypto = "0.8"
starknet-types-core = "0.2.0"
introspect-value = { git = "https://github.com/cartridge-gg/introspect", rev = "79a2a2e" }
introspect-types = { git = "https://github.com/cartridge-gg/introspect", rev = "79a2a2e" }
introspect-events = { git = "https://github.com/cartridge-gg/introspect", rev = "79a2a2e" }
#introspect-value = { path = "../introspect/crates/value" }
#introspect-types = { path = "../introspect/crates/types" }
#introspect-events = { path = "../introspect/crates/events" }
dojo-introspect-utils = { path = "crates/utils" }
dojo-introspect-types = { path = "crates/types" }
thiserror = "2.0.17"
async-trait = "0.1"
