[package]
name = "dojo-introspect"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo-introspect"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
introspect-types = { git = "https://github.com/cartridge-gg/introspect", rev = "3d11aa5" }
introspect-rust-macros = { git = "https://github.com/cartridge-gg/introspect", rev = "3d11aa5" }
# introspect-types.path = "../introspect/crates/types"
# introspect-rust-macros.path = "../introspect/crates/macros"
num-traits = { version = "0.2", default-features = false }
serde = "1.0.228"
starknet = "0.17.0"
starknet-crypto = "0.8"
starknet-types-core = "0.2.0"
thiserror = "2.0.17"

[dev-dependencies]

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[lib]
path = "crate/lib.rs"
