[package]
edition.workspace = true
name = "dojo-introspect-manager"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
starknet-types-core.workspace = true
num-traits.workspace = true
cainome-cairo-serde.workspace = true
dojo-introspect-types = { path = "../types" }
dojo-introspect-utils = { path = "../utils" }
serde.workspace = true
serde_json = "1.0.145"

[dev-dependencies]
