[package]
edition.workspace = true
name = "dojo-introspect-manager"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dojo-introspect-types = { path = "../types" }
dojo-introspect-utils = { path = "../utils" }
introspect-types.workspace = true
num-traits.workspace = true
serde_json = "1.0.145"
serde.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true

[dev-dependencies]
