[package]
edition.workspace = true
name = "dojo-introspect-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
starknet-types-core.workspace = true
num-traits.workspace = true
cainome-cairo-serde.workspace = true
serde.workspace = true
introspect-value.workspace = true
introspect-types.workspace = true
introspect-events.workspace = true
dojo-introspect-utils.workspace = true
thiserror.workspace = true

[dev-dependencies]
