[package]
edition.workspace = true
name = "dojo-introspect-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cainome-cairo-serde.workspace = true
dojo-introspect-utils.workspace = true
introspect-types.workspace = true
num-traits.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
thiserror.workspace = true

[dev-dependencies]
