[package]
edition.workspace = true
name = "dojo-introspect-utils"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cainome-cairo-serde.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true

[dev-dependencies]
